WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279738
[-webkit-line-clamp] Fix css-overflow/line-clamp/webkit-line-clamp-036.html/37.html
https://bugs.webkit.org/show_bug.cgi?id=279738
Summary
[-webkit-line-clamp] Fix css-overflow/line-clamp/webkit-line-clamp-036.html/3...
alan
Reported
2024-09-15 12:32:36 PDT
ssia
Attachments
Patch
(3.22 KB, patch)
2024-09-15 12:34 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.22 KB, patch)
2024-09-15 14:28 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.22 KB, patch)
2024-09-16 08:43 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-09-15 12:34:11 PDT
Created
attachment 472567
[details]
Patch
alan
Comment 2
2024-09-15 14:28:33 PDT
Created
attachment 472570
[details]
[fast-cq]Patch
alan
Comment 3
2024-09-16 08:43:47 PDT
Created
attachment 472574
[details]
[fast-cq]Patch
EWS
Comment 4
2024-09-16 09:36:31 PDT
Committed
283706@main
(e2030d2c5df2): <
https://commits.webkit.org/283706@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472574
[details]
.
Radar WebKit Bug Importer
Comment 5
2024-09-16 09:37:15 PDT
<
rdar://problem/136080957
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug