[-webkit-line-clamp] Fix css-overflow/line-clamp/webkit-line-clamp-036.html/37.html https://bugs.webkit.org/show_bug.cgi?id=279738

Reviewed by Antti Koivisto.

"text-overflow: ellipsis" shouldn't apply within a -webkit-line-clamp context.

* LayoutTests/TestExpectations:
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::InlineFormattingUtils::lineEndingTruncationPolicy):

Canonical link: https://commits.webkit.org/283706@main